@@ -6,14 +6,13 @@
 
     <groupId>com.chy</groupId>
     <artifactId>lamia</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0.0</version>
     <packaging>jar</packaging>
 
     <properties>
-        <maven.compiler.source>11</maven.compiler.source>
-        <maven.compiler.target>11</maven.compiler.target>
+        <maven.compiler.source>8</maven.compiler.source>
+        <maven.compiler.target>8</maven.compiler.target>
     </properties>
-
 
     <build>
         <plugins>
@@ -25,23 +24,26 @@
                     <encoding>utf-8</encoding>
                     <showDeprecation>true</showDeprecation>
                     <showWarnings>true</showWarnings>
-                    <source>11</source>
-                    <target>11</target>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                    <!-- <compilerArgs>
+                         <arg>&#45;&#45;add-exports=jdk.compiler/com.sun.tools.javac.model=lamia</arg>
+                         <arg>&#45;&#45;add-exports=jdk.compiler/com.sun.tools.javac.tree=lamia</arg>
+                         <arg>&#45;&#45;add-exports=jdk.compiler/com.sun.tools.javac.api=lamia</arg>
+                         <arg>&#45;&#45;add-exports=jdk.compiler/com.sun.tools.javac.processing=lamia</arg>
+                         <arg>&#45;&#45;add-exports=jdk.compiler/com.sun.tools.javac.util=lamia</arg>
+                         <arg>&#45;&#45;add-exports=jdk.compiler/com.sun.tools.javac.code=lamia</arg>
+                         <arg>&#45;&#45;add-exports=jdk.compiler/com.sun.tools.javac.comp=lamia</arg>
+                         <arg>&#45;&#45;add-exports=java.base/jdk.internal.org.objectweb.asm=lamia</arg>
+                         <arg>&#45;&#45;add-exports=java.base/jdk.internal.org.objectweb.asm.signature=lamia</arg>
+                         <arg>&#45;&#45;add-exports=java.base/sun.reflect.annotation=lamia</arg>
+                     </compilerArgs>-->
                     <compilerArgs>
-                        <arg>--add-exports=jdk.compiler/com.sun.tools.javac.model=lamia</arg>
-                        <arg>--add-exports=jdk.compiler/com.sun.tools.javac.tree=lamia</arg>
-                        <arg>--add-exports=jdk.compiler/com.sun.tools.javac.api=lamia</arg>
-                        <arg>--add-exports=jdk.compiler/com.sun.tools.javac.processing=lamia</arg>
-                        <arg>--add-exports=jdk.compiler/com.sun.tools.javac.util=lamia</arg>
-                        <arg>--add-exports=jdk.compiler/com.sun.tools.javac.code=lamia</arg>
-                        <arg>--add-exports=jdk.compiler/com.sun.tools.javac.comp=lamia</arg>
-                        <arg>--add-exports=java.base/jdk.internal.org.objectweb.asm=lamia</arg>
-                        <arg>--add-exports=java.base/jdk.internal.org.objectweb.asm.signature=lamia</arg>
-                        <arg>--add-exports=java.base/sun.reflect.annotation=lamia</arg>
+                        <arg>-XDignore.symbol.file</arg>
                     </compilerArgs>
+                    <fork>true</fork>
                 </configuration>
             </plugin>
-
 
 
             <plugin>
@@ -70,6 +72,26 @@
                 </executions>
             </plugin>
 
+            <!--<plugin>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <executions>
+                    <execution>
+                        &lt;!&ndash; 绑定到package生命周期 &ndash;&gt;
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <descriptorRefs>
+                        &lt;!&ndash; 将依赖一起打包到 JAR &ndash;&gt;
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
+                    <appendAssemblyId>false</appendAssemblyId>
+                </configuration>
+            </plugin>-->
+
         </plugins>
 
         <resources>
@@ -96,7 +118,15 @@
             <version>2.13.0-rc2</version>
         </dependency>
 
-    </dependencies>
+        <dependency>
+            <groupId>com.sun</groupId>
+            <artifactId>tools</artifactId>
+            <version>1.8</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/src/main/resources/lib/tools.jar</systemPath>
+        </dependency>
 
+
+    </dependencies>
 
 </project>
